[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/GUI/QuitToDesktopButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/Menus/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI/SceneLoaderButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Themes/menu_label_title_theme.tres" type="Theme" id=4]
[ext_resource path="res://Resources/Themes/menu_default_theme.tres" type="Theme" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_top = 58.0
margin_bottom = 158.0
theme = ExtResource( 4 )
text = "pause"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -268.0
margin_right = 430.0
margin_bottom = 355.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 860.0
margin_bottom = 125.0
focus_neighbour_left = NodePath("../QuitToDesktopButton")
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_right = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 860.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "options"

[node name="QuitToMainMenu" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 331.0
margin_right = 860.0
margin_bottom = 457.0
text = "quit to main menu"
scene_to_load_path = "res://Scenes/GUI/Menus/MainMenu.tscn"

[node name="QuitToDesktopButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 497.0
margin_right = 860.0
margin_bottom = 623.0

[node name="MenusToDisplay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMainMenu" to="." method="_on_QuitToMainMenu_pressed"]
